--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,84 @@
         <input type="text" placeholder="поиск" class="search">
     </header>
     <main class="container">
-        <section class="">
-            <h1></h1>
+        <section class="banner" style="width: 100%">
+            <div class="content">
+                <h1>Готовьте <br>
+                    необычно и вкусно</h1>
+
+                <p style="font-size: 35px;">Открывайте мир высокой кухни с простыми и доступными рецептами на каждый
+                    день</p>
+                <button class="buttonBrawn">Меню</button>
+            </div>
+            <img src="./assets/images/banner.png" width="780" alt="banner">
+        </section>
+        <section class="benefits">
+            <div class="benefit">
+                <img width="85" src="./assets/images/fish.png" alt="fish">
+                <div>Высокое качество</div>
+            </div>
+            <div class="benefit">
+                <img width="85" src="./assets/images/carrot.png" alt="carrot">
+                <div>Сезонные овощи</div>
+            </div>
+            <div class="benefit">
+                <img width="85" src="./assets/images/lemon.png" alt="lemon">
+                <div>Изысканный вкус</div>
+            </div>
+        </section>
+        <section class="container categorySection">
+            <img width="750" src="./assets/images/categories.png" alt="categories">
+            <div class="categories">
+                <img src="./assets/images/breackfast.png" alt="breackfast">
+                <img src="./assets/images/lanch.png" alt="lanch">
+                <img src="./assets/images/dinner.png" alt="dinner">
+                <img src="./assets/images/deserts.png" alt="deserts">
+            </div>
+            <div style="display: flex; width: 100%; justify-content: end">
+                <button class="buttonBrawn">Перейти</button>
+            </div>
+        </section>
+        <section class="topSection">
+            <img width="220" src="./assets/images/top.png" alt="top" style="margin-bottom: 48px">
+            <div class="top">
+                <div class="top-left">
+                    <img width="400" src="./assets/images/chicken.png" alt="chicken" style="margin-bottom: 24px">
+                    <div style="font-size: 23px">
+                        Куриная ножка, <br> фаршированная <br> фаршем из отрубей
+                    </div>
+                    <button class="buttonBrawn">Подробнее</button>
+                </div>
+                <div class="top-right">
+                    <div class="product-card">
+                        <img src="./assets/images/cabadge.png" alt="categories">
+                        <div style="font-size: 16px">
+                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+                        </div>
+                        <button class="buttonBrawn">Подробнее</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="./assets/images/cabadge.png" alt="categories">
+                        <div style="font-size: 16px">
+                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+                        </div>
+                        <button class="buttonBrawn">Подробнее</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="./assets/images/cabadge.png" alt="categories">
+                        <div style="font-size: 16px">
+                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+                        </div>
+                        <button class="buttonBrawn">Подробнее</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="./assets/images/cabadge.png" alt="categories">
+                        <div style="font-size: 16px">
+                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+                        </div>
+                        <button class="buttonBrawn">Подробнее</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </div>
