--- a/src/index.html
+++ b/src/index.html
@@ -1,111 +1,150 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chef</title>
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/index.css">
+	<meta charset="UTF-8">
+	<meta name="viewport"
+	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Chef</title>
+	<link rel="stylesheet" href="styles/global.css">
+	<link rel="stylesheet" href="styles/index.css">
+	<link rel="stylesheet" href="styles/header.css">
+	<link rel="stylesheet" href="styles/footer.css">
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <div class="page container">
-    <header>
-        <a href="/">
-            <img src="./assets/images/logo.png" alt="logo">
-        </a>
-        <nav>
-            <a href="/recepts">Рецепты</a>
-            <a href="/recepts">Рекомендации</a>
-            <a href="/recepts">Избранное</a>
-            <a href="/recepts">О нас</a>
-            <a href="/recepts">Аккаунт</a>
-        </nav>
-        <input type="text" placeholder="поиск" class="search">
-    </header>
-    <main class="container">
-        <section class="banner" style="width: 100%">
-            <div class="content">
-                <h1>Готовьте <br>
-                    необычно и вкусно</h1>
+	<header>
+		<a href="/">
+			<img src="./assets/images/logo.png" alt="logo">
+		</a>
+		<nav>
+			<a href="/recepts">Рецепты</a>
+			<a href="/recepts">Рекомендации</a>
+			<a href="/recepts">Избранное</a>
+			<a href="/recepts">О нас</a>
+			<a href="/recepts">Аккаунт</a>
+		</nav>
+		<input type="text" placeholder="поиск" class="search">
+	</header>
+	<main class="container">
+		<section class="banner" style="width: 100%">
+			<div class="content">
+				<h1>Готовьте <br>
+					необычно и вкусно</h1>
 
-                <p style="font-size: 35px;">Открывайте мир высокой кухни с простыми и доступными рецептами на каждый
-                    день</p>
-                <button class="buttonBrawn">Меню</button>
-            </div>
-            <img src="./assets/images/banner.png" width="780" alt="banner">
-        </section>
-        <section class="benefits">
-            <div class="benefit">
-                <img width="85" src="./assets/images/fish.png" alt="fish">
-                <div>Высокое качество</div>
-            </div>
-            <div class="benefit">
-                <img width="85" src="./assets/images/carrot.png" alt="carrot">
-                <div>Сезонные овощи</div>
-            </div>
-            <div class="benefit">
-                <img width="85" src="./assets/images/lemon.png" alt="lemon">
-                <div>Изысканный вкус</div>
-            </div>
-        </section>
-        <section class="container categorySection">
-            <img width="750" src="./assets/images/categories.png" alt="categories">
-            <div class="categories">
-                <img src="./assets/images/breackfast.png" alt="breackfast">
-                <img src="./assets/images/lanch.png" alt="lanch">
-                <img src="./assets/images/dinner.png" alt="dinner">
-                <img src="./assets/images/deserts.png" alt="deserts">
-            </div>
-            <div style="display: flex; width: 100%; justify-content: end">
-                <button class="buttonBrawn">Перейти</button>
-            </div>
-        </section>
-        <section class="topSection">
-            <img width="220" src="./assets/images/top.png" alt="top" style="margin-bottom: 48px">
-            <div class="top">
-                <div class="top-left">
-                    <img width="400" src="./assets/images/chicken.png" alt="chicken" style="margin-bottom: 24px">
-                    <div style="font-size: 23px">
-                        Куриная ножка, <br> фаршированная <br> фаршем из отрубей
-                    </div>
-                    <button class="buttonBrawn">Подробнее</button>
-                </div>
-                <div class="top-right">
-                    <div class="product-card">
-                        <img src="./assets/images/cabadge.png" alt="categories">
-                        <div style="font-size: 16px">
-                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
-                        </div>
-                        <button class="buttonBrawn">Подробнее</button>
-                    </div>
-                    <div class="product-card">
-                        <img src="./assets/images/cabadge.png" alt="categories">
-                        <div style="font-size: 16px">
-                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
-                        </div>
-                        <button class="buttonBrawn">Подробнее</button>
-                    </div>
-                    <div class="product-card">
-                        <img src="./assets/images/cabadge.png" alt="categories">
-                        <div style="font-size: 16px">
-                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
-                        </div>
-                        <button class="buttonBrawn">Подробнее</button>
-                    </div>
-                    <div class="product-card">
-                        <img src="./assets/images/cabadge.png" alt="categories">
-                        <div style="font-size: 16px">
-                            Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
-                        </div>
-                        <button class="buttonBrawn">Подробнее</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+				<p style="font-size: 35px;">Открывайте мир высокой кухни с простыми и доступными рецептами на каждый
+					день</p>
+				<button class="buttonBrawn">Меню</button>
+			</div>
+			<img src="./assets/images/banner.png" width="780" alt="banner">
+		</section>
+		<section class="benefits">
+			<div class="benefit">
+				<img width="85" src="./assets/images/fish.png" alt="fish">
+				<div>Высокое качество</div>
+			</div>
+			<div class="benefit">
+				<img width="85" src="./assets/images/carrot.png" alt="carrot">
+				<div>Сезонные овощи</div>
+			</div>
+			<div class="benefit">
+				<img width="85" src="./assets/images/lemon.png" alt="lemon">
+				<div>Изысканный вкус</div>
+			</div>
+		</section>
+		<section class="container categorySection">
+			<img width="750" src="./assets/images/categories.png" alt="categories">
+			<div class="categories">
+				<img src="./assets/images/breackfast.png" alt="breackfast">
+				<img src="./assets/images/lanch.png" alt="lanch">
+				<img src="./assets/images/dinner.png" alt="dinner">
+				<img src="./assets/images/deserts.png" alt="deserts">
+			</div>
+			<div style="display: flex; width: 100%; justify-content: end">
+				<button class="buttonBrawn">Перейти</button>
+			</div>
+		</section>
+		<section class="topSection">
+			<img width="220" src="./assets/images/top.png" alt="top" style="margin-bottom: 48px">
+			<div class="top">
+				<div class="top-left">
+					<img width="400" src="./assets/images/chicken.png" alt="chicken" style="margin-bottom: 24px">
+					<div style="font-size: 23px">
+						Куриная ножка, <br> фаршированная <br> фаршем из отрубей
+					</div>
+					<button class="buttonBrawn">Подробнее</button>
+				</div>
+				<div class="top-right">
+					<div class="product-card">
+						<div>
+							<img src="./assets/images/cabadge.png" alt="categories">
+							<div style="font-size: 16px">
+								Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+							</div>
+							<button class="buttonBrawn">Подробнее</button>
+						</div>
+					</div>
+					<div class="product-card">
+						<div>
+							<img src="./assets/images/cabadge.png" alt="categories">
+							<div style="font-size: 16px">
+								Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+							</div>
+							<button class="buttonBrawn">Подробнее</button>
+						</div>
+					</div>
+					<div class="product-card">
+						<div>
+							<img src="./assets/images/cabadge.png" alt="categories">
+							<div style="font-size: 16px">
+								Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+							</div>
+							<button class="buttonBrawn">Подробнее</button>
+						</div>
+					</div>
+					<div class="product-card">
+						<div>
+							<img src="./assets/images/cabadge.png" alt="categories">
+							<div style="font-size: 16px">
+								Обожженная капуста / <br> крыжовник / горелые <br> сливки / пралине
+							</div>
+							<button class="buttonBrawn">Подробнее</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 </div>
+<footer>
+	<div class="logo">
+		<a href="/">
+			<img src="./assets/images/logo.png" alt="logo">
+		</a>
+	</div>
+	<div class="links">
+		<a href="/recepts">Рецепты</a>
+		<a href="/recepts">Рекомендации</a>
+		<a href="/recepts">Избранное</a>
+		<a href="/recepts">О нас</a>
+	</div>
+	<div class="socials">
+		<a href="">
+			<img src="./assets/images/vk.png" alt="vk">
+		</a>
+		<a href="">
+			<img src="./assets/images/twitter.png" alt="twitter">
+		</a>
+		<a href="">
+			<img src="./assets/images/instagram.png" alt="instagram">
+		</a>
+		<a href="">
+			<img src="./assets/images/telegram.png" alt="telegram">
+		</a>
+	</div>
+	<a href="/" style="text-decoration: underline">Политика конфиденциональности</a>
+</footer>
 <script src="scripts/main.js"></script>
 </body>
 </html>
