--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
 <footer>
 	<div class="logo">
 		<a href="/">
-			<img src="./assets/images/logo.png" alt="logo">
+			<img src="./assets/images/footerLogo.png" alt="logo" width="550">
 		</a>
 	</div>
 	<div class="links">
