Сделал страницу продукты

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Chef</title>
-	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/index.css">
+	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/header.css">
 	<link rel="stylesheet" href="styles/footer.css">
 	<script src="https://cdn.tailwindcss.com"></script>
@@ -56,10 +56,18 @@
 		<section class="container categorySection">
 			<img width="750" src="./assets/images/categories.png" alt="categories">
 			<div class="categories">
-				<img src="./assets/images/breackfast.png" alt="breackfast">
-				<img src="./assets/images/lanch.png" alt="lanch">
-				<img src="./assets/images/dinner.png" alt="dinner">
-				<img src="./assets/images/deserts.png" alt="deserts">
+				<a href="./pages/categories.html?type=breackfast">
+					<img src="./assets/images/breackfast.png" alt="breackfast">
+				</a>
+				<a href="./pages/categories.html?type=lanch">
+					<img src="./assets/images/lanch.png" alt="lanch">
+				</a>
+				<a href="./pages/categories.html?type=dinner">
+					<img src="./assets/images/dinner.png" alt="dinner">
+				</a>
+				<a href="./pages/categories.html?type=deserts">
+					<img src="./assets/images/deserts.png" alt="deserts">
+				</a>
 			</div>
 			<div style="display: flex; width: 100%; justify-content: end">
 				<button class="buttonBrawn">Перейти</button>
