--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -5,9 +5,172 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Detail</title>
+	<title>Categories</title>
+	<link rel="stylesheet" href="../styles/global.css">
+	<link rel="stylesheet" href="../styles/header.css">
+	<link rel="stylesheet" href="../styles/footer.css">
+	<link rel="stylesheet" href="../styles/detail.css">
 </head>
 <body>
+<div class="container">
+	<header>
+		<a href="/">
+			<img src="../assets/images/logo.png" alt="logo">
+		</a>
+		<nav>
+			<a href="/recepts">Рецепты</a>
+			<a href="/recepts">Рекомендации</a>
+			<a href="/recepts">Избранное</a>
+			<a href="/recepts">О нас</a>
+			<a href="/recepts">Аккаунт</a>
+		</nav>
+		<input type="text" placeholder="поиск" class="search">
+	</header>
 
+	<main style="margin-top: 32px">
+		<section class="main">
+			<div style="border-radius: 16px; overflow: hidden">
+				<img width="565" id="img" src="../assets/categories/1_food.png" alt="">
+			</div>
+			<div>
+				<h1 id="title" style="color: #B5651F; font-size: 36px; margin-bottom: 36px; margin-top: 22px"></h1>
+				<p>Время приготовления: 1 час</p>
+				<p>Уровень сложности: средний</p>
+				<div style="margin-bottom: 12px">
+					<img width="150" src="../assets/images/rate.png" alt="rate">
+				</div>
+				<div style="margin-bottom: 16px">
+					<img width="150" src="../assets/images/viewed.png" alt="viewed">
+				</div>
+				<div>
+					<p style="font-weight: 500">Что такое Филе Миньон?</p>
+					<p>Филе-миньон — постный, но невероятно нежный вид говяжьего стейка, который берется из тонкой части вырезки
+						со спины коровы.</p>
+					<br>
+					<p style="font-weight: 500">Ингредиенты</p>
+					<ui>
+						<li>4 (по 8 унций каждый стейка филе-миньон</li>
+						<li>Кошерная соль</li>
+						<li>Черный перец свежемолотый</li>
+						<li>1ст. л.светлого оливкового масла или растительного масла</li>
+					</ui>
+				</div>
+			</div>
+		</section>
+		<section class="recept">
+			<img style="margin-bottom: 24px" width="500" src="../assets/images/receptImg.png" alt="">
+			<div class="receptView">
+				<div class="steps">
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">1 шаг:</p>
+						<p>Отмерьте и подготовьте ингредиенты. Достаньте стейки из холодильника минимум за 1 час, чтобы
+							филе-миньон нагрелось до комнатной температуры
+						</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">2 шаг:</p>
+						<p>Разогрейте духовку до 200 °C.
+							Аккуратно промокните стейки бумажным полотенцем, чтобы они полностью высохли
+						</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">3 шаг:</p>
+						<p>Посолите и поперчите стейк со всех сторон</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">4 шаг:</p>
+						<p>В чугунную сковороду или жаропрочную форму для запекания на сильном огне добавьте оливковое масло.
+							Подождите до 5 минут, пока масло не нагреется и от сковороды не пойдёт дымок. Добавьте сливочное масло и
+							филе-миньон. Обжаривайте примерно 2 минуты. Старайтесь не переворачивать мясо во время обжаривания, так
+							как именно так образуется идеальная золотистая корочка</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">5 шаг:</p>
+						<p>Переверните филе-миньон. Добавьте в сковороду свежий розмарин. Поливайте стейк соусом, пока он
+							обжаривается, ещё 2 минуты.</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">6 шаг:</p>
+						<p>Обжаривайте края стейка в течение 20 секунд. Затем проверьте температуру с помощью термометра. Если
+							желаемая температура не превышает десяти градусов, поставьте сковороду в духовку еще на 5 минут и
+							проверяйте температуру. Если желаемая температура не достигнута, проверяйте каждые 2 минуты, чтобы не
+							пережарить.</p>
+					</div>
+					<div class="step">
+						<p style="margin-bottom: 16px; font-weight: bold">7 шаг:</p>
+						<p>Достаньте из сковороды и дайте филе-миньону остыть в течение примерно 5 минут. Подавайте и
+							наслаждайтесь!</p>
+					</div>
+					<div style="display: flex; gap: 16px">
+						<img src="../assets/images/line.png" alt="">
+						<div>
+							<p style="font-weight: bold">Предупреждения:</p>
+							<div style="margin-left: 12px">
+								<p style="margin-bottom: 4px">1. Обязательно покупайте филе-миньон хорошего качества.</p>
+								<p style="margin-bottom: 4px">2. Для достижения лучшего вкуса избегайте использования поваренной
+									соли.</p>
+								<p style="margin-bottom: 4px">3. Это предотвращает расплавление соли и образование пара.</p>
+								<p style="margin-bottom: 4px">4. Будет выделяться дым, поэтому обязательно откройте окна или проветрите
+									кухню.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="images">
+					<div>
+						<img src="../assets/images/group-1.png" alt="group">
+						<img src="../assets/images/group-1.png" alt="group">
+					</div>
+					<div>
+						<img src="../assets/images/group-1.png" alt="group">
+						<img src="../assets/images/group-1.png" alt="group">
+					</div>
+					<div>
+						<img src="../assets/images/group-1.png" alt="group">
+						<img src="../assets/images/group-1.png" alt="group">
+					</div>
+					<div style="margin-top: 36px">
+						<div style="flex: 1"></div>
+						<img src="../assets/images/staik.png" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="reviews">
+			<img width="300" src="../assets/images/reviews.png" alt="reviews">
+		</section>
+	</main>
+</div>
+
+<footer>
+	<div class="logo">
+		<a href="/">
+			<img src="../assets/images/footerLogo.png" alt="logo" width="550">
+		</a>
+	</div>
+	<div class="links">
+		<a href="/recepts">Рецепты</a>
+		<a href="/recepts">Рекомендации</a>
+		<a href="/recepts">Избранное</a>
+		<a href="/recepts">О нас</a>
+	</div>
+	<div class="socials">
+		<a href="">
+			<img src="../assets/images/vk.png" alt="vk">
+		</a>
+		<a href="">
+			<img src="../assets/images/twitter.png" alt="twitter">
+		</a>
+		<a href="">
+			<img src="../assets/images/instagram.png" alt="instagram">
+		</a>
+		<a href="">
+			<img src="../assets/images/telegram.png" alt="telegram">
+		</a>
+	</div>
+	<a href="/" style="text-decoration: underline">Политика конфиденциональности</a>
+</footer>
+<script src="../db/categoriesDb.js"></script>
+<script src="../scripts/detail.js"></script>
 </body>
 </html>
