Сделал модалку авторизации

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/header.css">
 	<link rel="stylesheet" href="styles/footer.css">
+	<link rel="stylesheet" href="./styles/modal.css">
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -23,9 +24,29 @@
 			<a href="/recepts">Рекомендации</a>
 			<a href="/recepts">Избранное</a>
 			<a href="/recepts">О нас</a>
-			<a href="/recepts">Аккаунт</a>
+			<div id="openModal">Аккаунт</div>
 		</nav>
 		<input type="text" placeholder="поиск" class="search">
+		<div class="authModal" id="authModal">
+			<img class="closebtn" src="./assets/images/close.png" alt="close">
+			<img width="350" src="./assets/images/register.png" alt="">
+			<input class="inputUnderline" type="text" placeholder="Имя ">
+			<input class="inputUnderline" type="text" placeholder="Фамилия  ">
+			<input class="inputUnderline" type="text" placeholder="Email ">
+			<input class="inputUnderline" type="text" placeholder="Придумайте пароль ">
+			<input class="inputUnderline" type="text" placeholder="Повторите пароль ">
+			<button class="buttonBrawn">Регистрация</button>
+			<div id="hasAccBtn" style="text-decoration: underline; cursor: pointer; color: gray">У вас есть аккаунт?</div>
+		</div>
+		<div class="authModal" id="registerModal">
+			<img class="closebtn" src="./assets/images/close.png" alt="close">
+			<img width="350" src="./assets/images/register.png" alt="">
+			<input class="inputUnderline" type="text" placeholder="Email ">
+			<input class="inputUnderline" type="text" placeholder="Введите пароль ">
+			<button class="buttonBrawn">Войти</button>
+			<div id="notHasAcc" style="text-decoration: underline; cursor: pointer; color: gray">Нет аккаунта?</div>
+		</div>
+		<div id="backdrop"></div>
 	</header>
 	<main class="container">
 		<section class="banner" style="width: 100%">
@@ -154,5 +175,6 @@
 	<a href="/" style="text-decoration: underline">Политика конфиденциональности</a>
 </footer>
 <script src="scripts/main.js"></script>
+<script src="./scripts/modal.js"></script>
 </body>
 </html>
